challenge4/force-app/main/default/objects/Fridge_Log__e/Fridge_Log__e.object-meta.xml
<CustomObject>
    <label>冷蔵庫の開閉</label>
</CustomObject>