challenge4/force-app/main/default/objects/Fridge_Log__e/fields/badgeId__c.field-meta.xml
<CustomField>
    <fullName>badgeId__c</fullName>
    <label>badgeId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>