challenge4/force-app/main/default/objects/Fridge_Log__e/fields/employeeName__c.field-meta.xml
<CustomField>
    <fullName>employeeName__c</fullName>
    <label>employeeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>