challenge4/force-app/main/default/objects/Fridge_Log__e/fields/fridgeId__c.field-meta.xml
<CustomField>
    <fullName>fridgeId__c</fullName>
    <label>fridgeId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>